--- a/treasure.html
+++ b/treasure.html
@@ -2,6 +2,36 @@
 <html lang="en">
 <head>
     <title>Lohitha Digs for Treasure</title>
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        margin: 20px;
+    }
+    h1 {
+        color: darkblue;
+    }
+    .instruction {
+        font-style: italic;
+        margin-bottom: 10px;
+    }
+    #locations, #score, #help {
+        font-weight: bold;
+    }
+    #help {
+        color: darkred;
+    }
+    .game-row {
+        display: flex;
+    }
+    .game-cell img {
+        width: 50px;
+        height: 50px;
+    }
+    .game-cell {
+        border: 1px solid #ccc;
+        padding: 2px;
+    }
+</style>
 </head>
 <body>
     <h1>Lohitha Digs for Treasure</h1>
@@ -10,5 +40,56 @@
     <p id="score">Score is zero.</p>
     <p onclick="help()">Click for help.</p>
     <p id="help">Help report</p>
+
+    <!-- Game Field (5 rows x 7 columns) -->
+<div id="game-board">images
+    <!-- 5 rows each containing 7 images -->
+    <div class="game-row">
+        <div class="game-cell"><img src="cactus jpg.webp"></div>
+        <div class="game-cell"><img src="cactus jpg.webp"></div>
+        <div class="game-cell"><img src="cactus jpg.webp"></div>
+        <div class="game-cell"><img src="cactus jpg.webp"></div>
+        <div class="game-cell"><img src="cactus jpg.webp"></div>
+        <div class="game-cell"><img src="cactus jpg.webp"></div>
+        <div class="game-cell"><img src="cactus jpg.webp"></div>
+    </div>
+    <div class="game-row">
+        <div class="game-cell"><img src="cactus jpg.webp"></div>
+        <div class="game-cell"><img src="cactus jpg.webp"></div>
+        <div class="game-cell"><img src="cactus jpg.webp"></div>
+        <div class="game-cell"><img src="cactus jpg.webp"></div>
+        <div class="game-cell"><img src="cactus jpg.webp"></div>
+        <div class="game-cell"><img src="cactus jpg.webp"></div>
+        <div class="game-cell"><img src="cactus jpg.webp"></div>
+    </div>
+    <div class="game-row">
+        <div class="game-cell"><img src="cactus jpg.webp"></div>
+        <div class="game-cell"><img src="cactus jpg.webp"></div>
+        <div class="game-cell"><img src="cactus jpg.webp"></div>
+        <div class="game-cell"><img src="cactus jpg.webp"></div>
+        <div class="game-cell"><img src="cactus jpg.webp"></div>
+        <div class="game-cell"><img src="cactus jpg.webp"></div>
+        <div class="game-cell"><img src="cactus jpg.webp"></div>
+    </div>
+    <div class="game-row">
+        <div class="game-cell"><img src="cactus jpg.webp"></div>
+        <div class="game-cell"><img src="cactus jpg.webp"></div>
+        <div class="game-cell"><img src="cactus jpg.webp"></div>
+        <div class="game-cell"><img src="cactus jpg.webp"></div>
+        <div class="game-cell"><img src="cactus jpg.webp"></div>
+        <div class="game-cell"><img src="cactus jpg.webp"></div>
+        <div class="game-cell"><img src="cactus jpg.webp"></div>
+    </div>
+    <div class="game-row">
+        <div class="game-cell"><img src="cactus jpg.webp"></div>
+        <div class="game-cell"><img src="cactus jpg.webp"></div>
+        <div class="game-cell"><img src="cactus jpg.webp"></div>
+        <div class="game-cell"><img src="cactus jpg.webp"></div>
+        <div class="game-cell"><img src="cactus jpg.webp"></div>
+        <div class="game-cell"><img src="cactus jpg.webp"></div>
+        <div class="game-cell"><img src="cactus jpg.webp"></div>
+    </div>
+</div>
+
 </body>
 </html>
