--- a/reflex.html
+++ b/reflex.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<h1>Pooja Reflexes</h1>
+<h1>Lohitha vodnala's Reflexes</h1>
 <div id="target">Your time: </div>
 <div id="counter">Count: </div>
 
